정적 파일 nunjucks(템플릿엔진)을 통한 렌더링 작업 완료

--- a/nodejs/myapp/views/login.html
+++ b/nodejs/myapp/views/login.html
@@ -2,20 +2,26 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>로그인 Example</title>
+        <title>로그인 Page</title>
     </head>
-    <body style="text-align: center;">
-        <div class="Login">
-            <form action="http://127.0.0.1:1234/users" accept-charset="utf-8" name="userId" method="post">
-                <fieldset style="width: 150px;">
-                    <legend>Login</legend>
-                        Name: <input type="text" name="userName"/> <br><br>
-                        ID: <input type="text" name="userId"/> <br><br>
-                        PW: <input type="password" name="userPassword" /><br><br>
-                        
-                        <input type="submit" value="submit"/>
-                </fieldset>
-            </form>
-        </div>
+    <body>
+        <header>
+
+        </header>
+        <article>
+            <div class="Login">
+                <form action="http://127.0.0.1:1234/users" accept-charset="utf-8" name="userId" method="post">
+                    <fieldset>
+                        <legend>Login</legend>
+                            Name: <input type="text" name="userName"/> <br><br>
+                            ID: <input type="text" name="userId"/> <br><br>
+                            PW: <input type="password" name="userPassword" /><br><br>
+                            
+                            <input type="submit" value="submit"/>
+                    </fieldset>
+                </form>
+            </div>
+        </article>
+        
     </body>
 </html>
